Initial AngularJS setup

--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -12,22 +12,27 @@
     <title>SB Admin 2 - Bootstrap Admin Theme</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- MetisMenu CSS -->
-    <link href="../bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
+    <link href="../../../bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
 
     <!-- Timeline CSS -->
-    <link href="../dist/css/timeline.css" rel="stylesheet">
+    <link href="../../../dist/css/timeline.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
+    <link href="../../../dist/css/sb-admin-2.css" rel="stylesheet">
 
     <!-- Morris Charts CSS -->
-    <link href="../bower_components/morrisjs/morris.css" rel="stylesheet">
+    <link href="../../../bower_components/morrisjs/morris.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../../../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+    <!-- AngularJS Setup -->
+    <script src="/js/angular.min.js"></script>
+    <script src="/app/app.js"></script>
+    <script src="/app/components/home/homeController.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -51,7 +56,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">UusÕIS</a>
+                <a class="navbar-brand" href="home.html">UusÕIS</a>
             </div>
             <!-- /.navbar-header -->
 
@@ -256,7 +261,7 @@
                         <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
                         </li>
                         <li class="divider"></li>
-                        <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        <li><a href="../../../pages/login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
                     </ul>
                     <!-- /.dropdown-user -->
@@ -280,28 +285,28 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Minu Nimi</a>
+                            <a href="home.html"><i class="fa fa-dashboard fa-fw"></i> Minu Nimi</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-wrench fa-fw"></i> IAPB64<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="panels-wells.html">Õpilane Üks</a>
+                                    <a href="../../../pages/panels-wells.html">Õpilane Üks</a>
                                 </li>
                                 <li>
-                                    <a href="buttons.html">Õpilane Kaks</a>
+                                    <a href="../../../pages/buttons.html">Õpilane Kaks</a>
                                 </li>
                                 <li>
-                                    <a href="notifications.html">Õpilane Kolm</a>
+                                    <a href="../../../pages/notifications.html">Õpilane Kolm</a>
                                 </li>
                                 <li>
-                                    <a href="typography.html">Õpilane Neli</a>
+                                    <a href="../../../pages/typography.html">Õpilane Neli</a>
                                 </li>
                                 <li>
-                                    <a href="icons.html"> Õpilane Viis</a>
+                                    <a href="../../../pages/icons.html"> Õpilane Viis</a>
                                 </li>
                                 <li>
-                                    <a href="grid.html">Õpilane Kuus</a>
+                                    <a href="../../../pages/grid.html">Õpilane Kuus</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
@@ -664,21 +669,21 @@
     <!-- /#wrapper -->
 
     <!-- jQuery -->
-    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../../../bower_components/jquery/dist/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- Metis Menu Plugin JavaScript -->
-    <script src="../bower_components/metisMenu/dist/metisMenu.min.js"></script>
+    <script src="../../../bower_components/metisMenu/dist/metisMenu.min.js"></script>
 
     <!-- Morris Charts JavaScript -->
-    <script src="../bower_components/raphael/raphael-min.js"></script>
-    <script src="../bower_components/morrisjs/morris.min.js"></script>
-    <script src="../js/morris-data.js"></script>
+    <script src="../../../bower_components/raphael/raphael-min.js"></script>
+    <script src="../../../bower_components/morrisjs/morris.min.js"></script>
+    <script src="../../../js/morris-data.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="../dist/js/sb-admin-2.js"></script>
+    <script src="../../../dist/js/sb-admin-2.js"></script>
 
 </body>
 
