--- a/app/components/dashboard/dashboard.html
+++ b/app/components/dashboard/dashboard.html
@@ -2,7 +2,7 @@
     <!-- /.row -->
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">{{message}}</h1>
+            <h1 class="page-header">{{module_title}}</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
