--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -31,7 +31,9 @@
     <!-- AngularJS Setup -->
     <script src="../../../js/angular.min.js"></script>
     <!-- Bower components -->
-    <script src="../../../bower_components/angular-route/angular-route.js"></script>
+    <script src="../../../bower_components/angular-route/angular-route.min.js"></script>
+    <script src="../../../bower_components/angular-animate/angular-animate.min.js"></script>
+    <script src="../../../bower_components/angular-touch/angular-touch.min.js"></script>
 
     <script src="../../../app/app.js"></script>
     <script src="../../../app/components/home/homeController.js"></script>
@@ -56,7 +58,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/">UusÕIS</a>
+            <a class="navbar-brand" href="#/">Õppeinfosüsteem - Tallinna Tehnikaülikool</a>
         </div>
         <!-- /.navbar-header -->
 
@@ -284,7 +286,7 @@
     </nav>
 
     <!-- /#page-wrapper -->
-    <div ng-view></div>
+    <div class="page about" ng-view></div>
 </div>
 <!-- /#wrapper -->
 
@@ -293,6 +295,10 @@
 
 <!-- Bootstrap Core JavaScript -->
 <script src="../../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+<!-- Bootstrap Core AngularJS -->
+<script src="../../../bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+<script src="../../../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 
 <!-- Metis Menu Plugin JavaScript -->
 <script src="../../../bower_components/metisMenu/dist/metisMenu.min.js"></script>
