--- a/app/components/study_results/study_results.html
+++ b/app/components/study_results/study_results.html
@@ -2,62 +2,42 @@
     <!-- /.row -->
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">{{message}}</h1>
+            <h1 class="page-header">{{module_title}}</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
     <!-- /.row -->
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
+    <div ng-controller="studyResultsController">
+        <script type="text/ng-template" id="group-template.html">
+            <div class="panel {{panelClass || 'panel-default'}}">
                 <div class="panel-heading">
-                    Collapsible Accordion Panel Group
+                    <h4 class="panel-title" style="color:#fa39c3">
+                        <a href tabindex="0" class="accordion-toggle" ng-click="toggleOpen()"
+                           uib-accordion-transclude="heading"><span
+                                ng-class="{'text-muted': isDisabled}">{{heading}}</span></a>
+                    </h4>
                 </div>
-                <!-- .panel-heading -->
-                <div class="panel-body">
-                    <div class="panel-group" id="accordion">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">
-                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" class="collapsed">Collapsible Group Item #1</a>
-                                </h4>
-                            </div>
-                            <div id="collapseOne" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
-                                <div class="panel-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">
-                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" class="collapsed" aria-expanded="false">Collapsible Group Item #2</a>
-                                </h4>
-                            </div>
-                            <div id="collapseTwo" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
-                                <div class="panel-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">
-                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" class="" aria-expanded="true">Collapsible Group Item #3</a>
-                                </h4>
-                            </div>
-                            <div id="collapseThree" class="panel-collapse collapse in" aria-expanded="true">
-                                <div class="panel-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="panel-collapse collapse" uib-collapse="!isOpen">
+                    <div class="panel-body" style="text-align: right" ng-transclude></div>
                 </div>
-                <!-- .panel-body -->
             </div>
-            <!-- /.panel -->
-        </div>
-        <!-- /.col-lg-12 -->
+        </script>
+
+        <uib-accordion close-others="oneAtATime">
+            <uib-accordion-group heading="Staatiline" is-open="status.isFirstOpen"
+                                 is-disabled="status.isFirstDisabled">
+                Vajuta õppeaine nimetusele.
+            </uib-accordion-group>
+            <uib-accordion-group heading="{{group.title}}" ng-repeat="group in groups">
+                {{group.content}}
+            </uib-accordion-group>
+            <uib-accordion-group heading="(testing) Dynamic Body Content">
+                <button type="button" class="btn btn-default btn-sm" ng-click="addItem()">Add Item</button>
+                <div ng-repeat="item in items">{{item}}</div>
+            </uib-accordion-group>
+            <uib-accordion-group heading="(testing) Custom template" template-url="group-template.html">
+                Hello
+            </uib-accordion-group>
+        </uib-accordion>
     </div>
 </div>
