Added redirection from login page.

--- a/app/components/register/register.html
+++ b/app/components/register/register.html
@@ -12,19 +12,19 @@
     <title>Registreeri</title>
 
     <!-- Register custom CSS-->
-    <link href="../dist/css/register.css" rel="stylesheet">
+    <link href="../../../dist/css/register.css" rel="stylesheet">
 
     <!-- Bootstrap Core CSS -->
-    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- MetisMenu CSS -->
-    <link href="../bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
+    <link href="../../../bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
+    <link href="../../../dist/css/sb-admin-2.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../../../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -51,16 +51,20 @@
                                 <input class="form-control" placeholder="E-mail..." name="email" type="email" autofocus>
                             </div>
                             <div class="form-group">
-                                <input class="form-control" placeholder="Parool..." name="password" type="password" value="">
+                                <input class="form-control" placeholder="Parool..." name="password" type="password"
+                                       value="">
                             </div>
                             <div class="form-group">
-                                <input class="form-control" placeholder="Parool uuesti..." name="passwordconfirm" type="password" value="">
+                                <input class="form-control" placeholder="Parool uuesti..." name="passwordconfirm"
+                                       type="password" value="">
                             </div>
                             <div class="form-group">
-                                <input class="form-control" placeholder="Eesnimi..." name="eesnimi" type="text" value="">
+                                <input class="form-control" placeholder="Eesnimi..." name="eesnimi" type="text"
+                                       value="">
                             </div>
                             <div class="form-group">
-                                <input class="form-control" placeholder="Perekonnanimi..." name="perekonnanimi" type="text" value="">
+                                <input class="form-control" placeholder="Perekonnanimi..." name="perekonnanimi"
+                                       type="text" value="">
                             </div>
                             <div class="form-group">
                                 <select class="form-control" id="sel1">
@@ -70,11 +74,12 @@
                             </div>
                             <div class="form-group login-group-checkbox">
                                 <input type="checkbox" class="" id="reg_agree" name="reg_agree">
-                                <label for="reg_agree">Nõustun <a href="termsandcontitions.html" target="popup" onclick="window.open('termsandcontitions.html','Tingimused','width=600,height=400')">tingimustega</a></label>
+                                <label for="reg_agree">Nõustun <a href="termsandcontitions.html" target="popup"
+                                                                  onclick="window.open('termsandcontitions.html','Tingimused','width=600,height=400')">tingimustega</a></label>
                             </div>
-                            <p>Oled juba kasutaja? <a href="login.html">logi sisse</a></p>
+                            <p>Oled juba kasutaja? <a href="../login/login.html">logi sisse</a></p>
                             <!-- Change this to a button or input when using this as a form -->
-                            <a href="../app/components/home/home.html" class="btn btn-lg btn-success btn-block">Registreerin</a>
+                            <a href="../home/home.html" class="btn btn-lg btn-success btn-block">Registreerin</a>
                         </fieldset>
                     </form>
                 </div>
@@ -84,16 +89,16 @@
 </div>
 
 <!-- jQuery -->
-<script src="../bower_components/jquery/dist/jquery.min.js"></script>
+<script src="../../../bower_components/jquery/dist/jquery.min.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 <!-- Metis Menu Plugin JavaScript -->
-<script src="../bower_components/metisMenu/dist/metisMenu.min.js"></script>
+<script src="../../../bower_components/metisMenu/dist/metisMenu.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="../dist/js/sb-admin-2.js"></script>
+<script src="../../../dist/js/sb-admin-2.js"></script>
 
 </body>
 
