--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -267,7 +267,8 @@
                     <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
                     </li>
                     <li class="divider"></li>
-                    <li><a href="../../../pages/login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                    <li><a href="../../../app/components/login/login.html"><i class="fa fa-sign-out fa-fw"></i>
+                        Logout</a>
                     </li>
                 </ul>
                 <!-- /.dropdown-user -->
