--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -22,22 +22,8 @@
     <!-- Custom CSS -->
     <link href="../../../dist/css/sb-admin-2.css" rel="stylesheet">
 
-    <!-- Morris Charts CSS -->
-    <link href="../../../bower_components/morrisjs/morris.css" rel="stylesheet">
-
     <!-- Custom Fonts -->
     <link href="../../../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-    <!-- AngularJS Setup -->
-    <script src="../../../js/angular.min.js"></script>
-    <!-- Bower components -->
-    <script src="../../../bower_components/angular-route/angular-route.min.js"></script>
-    <script src="../../../bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="../../../bower_components/angular-touch/angular-touch.min.js"></script>
-
-    <script src="../../../app/app.js"></script>
-    <script src="../../../app/components/home/homeController.js"></script>
-    <script src="../../../app/components/study_results/studyResultsController.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -278,24 +264,33 @@
         <!-- /.navbar-top-links -->
 
         <!-- include left panel -->
-        <div ng-if="getRole() == ROLE_STUDENT">
-            <div ng-include="'../../../app/shared/left_panel/left_panel_student.html'"></div>
-        </div>
-        <div ng-if="getRole() == ROLE_TEACHER">
-            <div ng-include="'../../../app/shared/left_panel/left_panel_teacher.html'"></div>
-        </div>
+        <div ng-include="'../../../app/shared/left_panel/left_panel_student.html'" ng-controller="leftPanelController"></div>
+
+        <!--<div ng-if="getRole() == ROLE_STUDENT">-->
+            <!--<div ng-include="'../../../app/shared/left_panel/left_panel_student.html'" ng-controller="leftPanelController"></div>-->
+        <!--</div>-->
+        <!--<div ng-if="getRole() == ROLE_TEACHER">-->
+            <!--<div ng-include="'../../../app/shared/left_panel/left_panel_teacher.html'" ng-controller="leftPanelController"></div>-->
+        <!--</div>-->
     </nav>
 
     <!-- /#page-wrapper -->
     <div class="page about" ng-view></div>
 </div>
-<!-- /#wrapper -->
-
 <!-- jQuery -->
 <script src="../../../bower_components/jquery/dist/jquery.min.js"></script>
 
-<!-- Bootstrap Core JavaScript -->
-<script src="../../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<!-- AngularJS Setup -->
+<script src="../../../js/angular.min.js"></script>
+<!-- Bower components -->
+<script src="../../../bower_components/angular-route/angular-route.min.js"></script>
+<script src="../../../bower_components/angular-animate/angular-animate.min.js"></script>
+<script src="../../../bower_components/angular-touch/angular-touch.min.js"></script>
+
+<script src="../../../app/app.js"></script>
+<script src="../../../app/components/home/homeController.js"></script>
+<script src="../../../app/components/study_results/studyResultsController.js"></script>
+<script src="../../../app/shared/left_panel/leftPanelController.js"></script>
 
 <!-- Bootstrap Core AngularJS -->
 <script src="../../../bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
@@ -304,13 +299,8 @@
 <!-- Metis Menu Plugin JavaScript -->
 <script src="../../../bower_components/metisMenu/dist/metisMenu.min.js"></script>
 
-<!-- Morris Charts JavaScript -->
-<script src="../../../bower_components/raphael/raphael-min.js"></script>
-<script src="../../../bower_components/morrisjs/morris.js"></script>
-<script src="../../../js/morris-data.js"></script>
-
-<!-- Custom Theme JavaScript -->
-<script src="../../../dist/js/sb-admin-2.js"></script>
+<!-- Bootstrap Core JavaScript -->
+<script src="../../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
 
