--- a/app/components/login/login.html
+++ b/app/components/login/login.html
@@ -51,35 +51,102 @@
 
 <div class="container">
     <div class="row">
+        <!--<div class="col-md-4 col-md-offset-4">-->
+        <!--<div class="login-panel panel panel-default">-->
+        <!--<div class="panel-heading">-->
+        <!--<h3 class="panel-title">Tere tulemast!</h3>-->
+        <!--</div>-->
+        <!--<div class="panel-body">-->
+        <!--<form name="form" role="form">-->
+        <!--<fieldset>-->
+        <!--<div class="form-group">-->
+        <!--<input class="form-control" placeholder="{{ emeil }}" type="email" ng-model="email"-->
+        <!--autofocus>-->
+        <!--</div>-->
+        <!--<div class="form-group">-->
+        <!--<input class="form-control" placeholder="{{ parool }}" type="password"-->
+        <!--ng-model="password" value="">-->
+        <!--</div>-->
+        <!--<div class="checkbox">-->
+        <!--<label>-->
+        <!--<input name="remember" type="checkbox" value="Remember Me">Jäta mind meelde-->
+        <!--</label>-->
+        <!--</div>-->
+        <!--<div class="etc-login-form">-->
+        <!--<p>Unustasid parooli? <a href="#">lähtesta</a></p>-->
+        <!--<p>Uus kasutaja? <a href="../register/register.html">registreeru</a></p>-->
+        <!--</div>-->
+        <!--&lt;!&ndash; Change this to a button or input when using this as a form &ndash;&gt;-->
+        <!--<button ng-click="login()" class="btn btn-lg btn-success btn-block">Logi sisse</button>-->
+        <!--</fieldset>-->
+        <!--</form>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
+
         <div class="col-md-4 col-md-offset-4">
             <div class="login-panel panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">Tere tulemast!</h3>
                 </div>
                 <div class="panel-body">
-                    <form name="form" role="form">
-                        <fieldset>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="{{ emeil }}" type="email" ng-model="email"
-                                       autofocus>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="{{ parool }}" type="password"
-                                       ng-model="password" value="">
-                            </div>
+
+                    <!-- ============ FORM ============ -->
+
+                    <form name="loginForm" ng-submit="submitForm(email, password)" novalidate>
+
+                        <!-- EMAIL -->
+                        <div class="form-group" required>
+                            <!--<label>Email</label>-->
+                            <input type="email"
+                                   placeholder="{{ emailHint }}"
+                                   name="email" class="form-control"
+                                   ng-model="email"
+                                   ng-model-options="{ updateOn: 'blur' }"
+                                   ng-click="hideErrorMessages()">
+                            <p ng-show="loginForm.email.$invalid && !loginForm.email.$pristine && loginForm.email.$touched"
+                               class="help-block">
+                                Palun sisesta korrektne email. N: xxx@xxx.xxx</p>
+                            <p ng-show="emailFieldEmpty">{{ emailFieldEmptyErrorMessage }}</p>
+                        </div>
+
+                        <!-- PASSWORD -->
+                        <div class="form-group" required
+                             ng-class="{ 'has-error' : loginForm.password.$invalid && !loginForm.password.$pristine }">
+                            <!--<label>Parool</label>-->
+                            <input type="password"
+                                   placeholder="{{ passwordHint }}"
+                                   name="password"
+                                   class="form-control"
+                                   ng-model="password"
+                                   ng-click="hideErrorMessages()"
+                            >
+                            <p ng-show="passwordFieldEmpty">{{ passwordFieldEmptyErrorMessage}}</p>
+                            <!--<p ng-show="passwordWasNotFilled"> {{ passwordWasNotFilledMessage }}</p>-->
+                            <!--ng-minlength="3" ng-maxlength="8"-->
+                            <!--<p ng-show="loginForm.password.$error.minlength" class="help-block">Password is too short.</p>-->
+                            <!--<p ng-show="loginForm.password.$error.maxlength" class="help-block">Password is too long.</p>-->
+                        </div>
+
+                        <div class="form-group">
                             <div class="checkbox">
                                 <label>
-                                    <input name="remember" type="checkbox" value="Remember Me">Jäta mind meelde
+                                    <input name="remember" type="checkbox" value="Remember Me" ng-model="user.remember">Jäta
+                                    mind meelde
                                 </label>
                             </div>
                             <div class="etc-login-form">
                                 <p>Unustasid parooli? <a href="#">lähtesta</a></p>
                                 <p>Uus kasutaja? <a href="../register/register.html">registreeru</a></p>
                             </div>
-                            <!-- Change this to a button or input when using this as a form -->
-                            <button ng-click="login()" class="btn btn-lg btn-success btn-block">Logi sisse</button>
-                        </fieldset>
+                        </div>
+
+                        <button type="submit" class="btn btn-lg btn-success btn-block">Logi sisse</button>
+
                     </form>
+
+                    <!-- =========== END OF FORM ========== -->
+
                 </div>
             </div>
         </div>
@@ -92,6 +159,7 @@
 <!-- Bootstrap Core JavaScript -->
 <script src="../../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
+<!-- Bootstrap Core AngularJS -->
 <script src="../../../bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
 <script src="../../../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 
