--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -266,6 +266,8 @@
         <!-- include left panel -->
         <div ng-include="'../../../app/shared/left_panel/left_panel_teacher.html'" ng-controller="leftPanelController"></div>
 
+        <!--<div ng-include="'../../../app/shared/left_panel/left_panel_student.html'" ng-controller="leftPanelController"></div>-->
+
         <!--<div ng-if="getRole() == ROLE_STUDENT">-->
             <!--<div ng-include="'../../../app/shared/left_panel/left_panel_student.html'" ng-controller="leftPanelController"></div>-->
         <!--</div>-->
