--- a/app/components/login/login.css
+++ b/app/components/login/login.css
@@ -3,7 +3,7 @@
 
 .error {
     margin-top: 5px;
-    color: rgba(135, 0, 66, 1);
+    color: rgba(255, 255, 255, 1);
     display: block;
     font-family: 'Exo', sans-serif;
 }
@@ -18,7 +18,7 @@
 
 .help:hover,
 .help:active {
-    color: rgba(135, 0, 66, 1);
+    color: rgba(255, 255, 255, 0.7);
     text-decoration: none;
     outline: none;
 }
@@ -58,26 +58,28 @@ body {
     z-index: 0;
 }
 
-.grad {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-    width: auto;
-    height: auto;
-    background: -moz-radial-gradient(ellipse at center, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%); /* FF3.6-15 */
-    background: -webkit-radial-gradient(ellipse at center, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 80%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    z-index: 1;
-    opacity: 0.6;
-}
+/*.grad {*/
+/*position: absolute;*/
+/*top: 0px;*/
+/*left: 0px;*/
+/*right: 0px;*/
+/*bottom: 0px;*/
+/*width: auto;*/
+/*height: auto;*/
+/*background: -moz-radial-gradient(ellipse at center, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%); !* FF3.6-15 *!*/
+/*background: -webkit-radial-gradient(ellipse at center, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%); !* Chrome10-25,Safari5.1-6 *!*/
+/*background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 80%); !* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ *!*/
+/*z-index: 1;*/
+/*opacity: 0.6;*/
+/*}*/
 
 .header {
     position: absolute;
     top: calc(50% - 35px);
     left: calc(50% - 400px);
     z-index: 2;
+    background: rgba(20, 20, 20, 0.7);
+    padding: 5px;
 }
 
 .header div {
@@ -96,10 +98,9 @@ body {
     position: absolute;
     top: calc(50% - 75px);
     left: calc(50% + 50px);
-    height: 150px;
-    width: 350px;
     padding: 10px;
     z-index: 2;
+    background: rgba(135, 0, 66, 0.7);
 }
 
 .login input[type=email] {
@@ -133,7 +134,7 @@ body {
     width: 250px;
     height: 35px;
     background: rgba(135, 0, 66, 0.7);
-    border: 1px solid rgba(135, 0, 66, 0.7);
+    border: 1px solid rgba(255, 255, 255, 0.4);
     cursor: pointer;
     border-radius: 2px;
     color: #fff;
@@ -146,6 +147,8 @@ body {
 
 .login input[type=submit]:hover {
     opacity: 0.8;
+    background: rgba(255, 255, 255, 0.8);
+    color: rgba(135, 0, 66, 0.8);
 }
 
 .login input[type=submit]:active {
