--- a/app/components/grade_sheet_t/grade_sheet_t.html
+++ b/app/components/grade_sheet_t/grade_sheet_t.html
@@ -33,7 +33,7 @@
                         <i class="glyphicon glyphicon-edit">
                         </i>
                     </clicker>
-                    <button type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger">
+                    <button id="removeItem" type="button" ng-click="removeItem(row)" class="btn btn-sm btn-danger">
                         <i class="glyphicon glyphicon-remove-circle">
                         </i>
                     </button>
