--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -20,7 +20,7 @@
     <link href="../../../dist/css/timeline.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../../../dist/css/sb-admin-2.css" rel="stylesheet">
+    <link href="../../../dist/css/ois.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="../../../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
