Made some navigation fixes

--- a/app/components/grade_sheet_t/grade_sheet_t.html
+++ b/app/components/grade_sheet_t/grade_sheet_t.html
@@ -18,7 +18,7 @@
                 <th st-sort="balance">HW2</th>
             </tr>
             <tr>
-                <th colspan="5"><input st-search="" class="form-control" placeholder="Otsi õpilast..." type="text"/>
+                <th colspan="5"><input st-search="" class="form-control" placeholder="Otsi..." type="text"/>
                 </th>
             </tr>
             </thead>
