--- a/app/components/study_results/study_results.html
+++ b/app/components/study_results/study_results.html
@@ -31,11 +31,11 @@
             <!--is-disabled="status.isFirstDisabled">-->
             <!--Vajuta õppeaine nimetusele.-->
             <!--</uib-accordion-group>-->
-            <uib-accordion-group heading="{{group.title}}" ng-repeat="group in groups"
+            <uib-accordion-group ng-repeat="group in groups"
                                  template-url="group-template.html">
-                <!--<uib-accordion-heading>-->
-                <!--<span>{{group.title}}</span>-->
-                <!--</uib-accordion-heading>-->
+                <uib-accordion-heading>
+                    <span class="noselect">{{group.title}}</span>
+                </uib-accordion-heading>
                 <div class="table-responsive">
                     <table class="table table-hover">
                         <thead>
